--- a/package.json
+++ b/package.json
@@ -5,5 +5,15 @@
   "main": "index.js",
   "repository": "https://github.com/fmakdemir/fm-story-book-react-components",
   "author": "fmakdemir <fmakdemir@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@kadira/storybook": "^2.35.3"
+  },
+  "scripts": {
+    "storybook": "start-storybook -p 9001 -c .storybook"
+  },
+  "dependencies": {
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2"
+  }
 }
